[package]
name = "distinct-cqt-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.139", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
clap =  { version = "4.3.23", features = ["derive"]}
dotenv = "0.15.0"